# vidscribe

./: .env.example  .gitignore  Makefile  README.md  install-mlx.sh  pyproject.toml  requirements-dev.txt  requirements-mac.txt  requirements.txt  setup.py
scripts/: install.sh
src/vidscribe/: __init__.py  cli.py
src/vidscribe/config/: default.yaml
src/vidscribe/core/: __init__.py  engine.py
src/vidscribe/downloaders/: __init__.py  youtube.py
src/vidscribe/processors/: __init__.py  playlist.py
src/vidscribe/utils/: __init__.py  config.py  formatters.py  validators.py
tests/: conftest.py
tests/unit/: test_cli.py  test_formatters.py  test_help_content.py  test_validators.py
